--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -3,7 +3,7 @@
         <a href="/">Home</a> &nbsp;&nbsp;
         <a href="/servers">Manage Servers</a> &nbsp;&nbsp;
         <a href="/faq">FAQ</a> &nbsp;&nbsp;
-        <a href="https://github.com/upfast.tf-go" target="_blank" rel="noopener">GitHub</a> &nbsp;&nbsp;
+        <a href="https://github.com/quickread" target="_blank" rel="noopener">GitHub</a> &nbsp;&nbsp;
     </p>
 </div>
 <hr>
