--- a/views/faq.html
+++ b/views/faq.html
@@ -1,4 +1,4 @@
-{{template "partials/header" .}}
+<!-- {{template "partials/header" .}} -->
 {{template "partials/navbar" .}}
 
 <h1>{{.Title}}</h1>
