--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,12 +1,12 @@
 <hr />
 <div class="footer">
     <p>
-        Copyright &copy; 2023 <a href="https://github.com/quickread" target="_blank" rel="noopener">upfast.tf</a>.
-        Contact: <a href="mailto:admin@upfast.tf">admin@upfast.tf</a>. <br>
-        Soldier art by VirtuaWave (<a href="https://www.youtube.com/watch?v=MrS7bezmsdk" target="_blank"
+        Copyright &copy; 2023 <a href="https://github.com/sawatkins/quickread" target="_blank" rel="noopener">quickread</a>.
+        Contact: <a href="mailto:admin@exmaple.com">admin@example.com</a>. <br>
+        <!-- Soldier art by VirtuaWave (<a href="https://www.youtube.com/watch?v=MrS7bezmsdk" target="_blank"
             rel="noopener noreferrer">yt</a>, <a href="https://gamedev-neoncity.tumblr.com/" target="_blank"
-            rel="noopener noreferrer">tumblr</a>).
-        Site design from <a href="https://github.com/go-kit/go-kit.github.io" target="_blank"
-            rel="noopener noreferrer">go-kit</a>.
+            rel="noopener noreferrer">tumblr</a>). -->
+        <!-- Site design from <a href="https://github.com/go-kit/go-kit.github.io" target="_blank"
+            rel="noopener noreferrer">go-kit</a>. -->
     </p>
 </div>
