--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,10 +1,10 @@
 <div id="heading">
     <div id="logo">
-        <a href="/"><img src="/img/rjw-crop.png" width=95 alt="soldier" /></a>
+        <a href="/"><img src="/img/eye.jpg" width=110 alt="eye" /></a>
     </div>
     <div id="title">
-        <h1>upfast.tf</h1>
-        <h3>Simple TF2 Servers</h3>
+        <h1>quick<i>read</i> </h1>
+        <h3>Make reading long pdfs easier</h3>
     </div>
 </div>
 <hr>
