--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -1,9 +1,11 @@
 <div id="navbar">
     <p>
+        <span style="font-size: 1.1rem">quick<i><strong>read</strong></i></span> &nbsp;&nbsp;
         <a href="/">Home</a> &nbsp;&nbsp;
-        <a href="/servers">Manage Servers</a> &nbsp;&nbsp;
+        <a href="/doc">Documents</a> &nbsp;&nbsp;
         <a href="/faq">FAQ</a> &nbsp;&nbsp;
-        <a href="https://github.com/quickread" target="_blank" rel="noopener">GitHub</a> &nbsp;&nbsp;
+        <a href="/import">Import<span style="border-bottom: none;">⤴</span></a>
+        <!-- <a href="https://github.com/sawatkins/quickread" target="_blank" rel="noopener">GitHub</a> &nbsp;&nbsp; -->
     </p>
 </div>
 <hr>
