--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 
 <!-- <h1>{{.Title}}</h1> -->
 
-<div class="flexcontainer">
+<div class="flexcontainer content-area">
     <div id="welcome-text">
         <h3>🚀&nbsp; Welcome to quickread!</h3>
         <ul>
