--- a/views/import.html
+++ b/views/import.html
@@ -3,15 +3,15 @@
 
 <!-- <h1>{{.Title}}</h1> -->
 
-<p>Import a PDF document. Max file size 15MB.</p>
-
-<div id="div-upload-doc">
+<div id="div-upload-doc" class="content-area">
+    <p>Import a PDF document. <span class="small-text">(Max file size 15MB)</span></p>
     <form id='form-upload-doc' action="/api/v1/upload" method="post" enctype="multipart/form-data">
         <label id="label-upload-doc" for="input-upload-doc">Browse File</label>
-        <input id="input-upload-doc" name="input-upload-doc" type="file">&nbsp;&nbsp;
+        <input id="input-upload-doc" name="input-upload-doc" type="file" onchange="displayFileName()">&nbsp;&nbsp;
         <!-- <p id="file_input_help">PDF files only (MAX. 60MB).</p> -->
         <button id="button-upload-doc" type="submit">Upload</button>
     </form>
+    <p id="upload-doc-filename" class="small-text"></p>
 </div>
 
 
