form upload with js working

--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -107,6 +107,7 @@ input[type="file"] {
   border-radius: 6px;
   font-family: inherit;
   font-size: inherit;
+  cursor: pointer;
 }
 
 .content-area {
