--- a/views/import.html
+++ b/views/import.html
@@ -13,7 +13,6 @@
     <p id="upload-doc-filename" class="small-text"></p>
 </div>
 
-<!-- <script>uploadDoc()</script> -->
-
+<script src="/js/upload.js"></script>
 
 {{template "partials/footer" .}}
