file upload ui elements

--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -46,6 +46,8 @@ body {
   width: 55%;
   min-width: 750px;
   margin: 15px auto;
+  padding-left: 15px;
+  padding-right: 15px;
   font-family: "Play", sans-serif;
 }
 
