--- a/views/import.html
+++ b/views/import.html
@@ -8,7 +8,9 @@
     <form id='form-upload-doc' action="/upload" method="post" enctype="multipart/form-data">
         <label id="label-upload-doc" for="input-upload-doc">Browse File</label>
         <input id="input-upload-doc" name="input-upload-doc" type="file" onchange="displayFileName()">&nbsp;&nbsp;
-        <button id="button-upload-doc" type="submit">Upload</button>
+        <button id="button-upload-doc" type="submit">Upload</button>&nbsp;&nbsp;
+        <p id="upload-result-status" style="display: inline;"></p>
+        <span id="upload-result-status-error" class="small-text" style="display: inline;"></span>
     </form>
     <p id="upload-doc-filename" class="small-text"></p>
 </div>
