--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-    <title>upfast.tf</title>
+    <title>quickread</title>
     <!-- <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="upfast.tf - Community TF2 servers in minutes" />
     <meta name="author" content="" />
     <meta name="keywords" content="" /> -->
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <!-- google fonts below -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
