--- a/views/import.html
+++ b/views/import.html
@@ -15,6 +15,11 @@
     <p id="upload-doc-filename" class="small-text"></p>
 </div>
 
+<div id="div-doc-pages-selection" class="content-area" style="display: none;">
+    <hr>
+    <p>Select which part of the document to use.</p>
+</div>
+
 <script src="/js/upload.js"></script>
 
 {{template "partials/footer" .}}
