implement summarize pdf

--- a/views/import.html
+++ b/views/import.html
@@ -21,6 +21,10 @@
     
 </div>
 
+<div id="div-summary-response">
+    <p id="summary-response"></p>
+</div>
+
 <script src="/js/upload.js"></script>
 
 {{template "partials/footer" .}}
