redo homepage text and combind import page

--- a/views/import.html
+++ b/views/import.html
@@ -25,6 +25,6 @@
     <p id="summary-response"></p>
 </div>
 
-<script src="/js/upload.js"></script>
+<!-- <script src="/js/upload.js"></script> -->
 
 {{template "partials/footer" .}}
