--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -49,6 +49,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   font-family: "Play", sans-serif;
+  /* min-height: 500px; */
 }
 
 div.flexcontainer {
@@ -97,7 +98,7 @@ input[type="file"] {
   cursor: pointer;
 }
 
-#button-upload-doc {
+#button-upload-doc, #button-paste-text {
   border: 1px solid forestgreen;
   background-color: forestgreen;
   display: inline-block;
@@ -114,10 +115,27 @@ input[type="file"] {
 
 .content-area {
   padding-left: 15px;
+  padding-right: 15px;
 }
 
 .small-text {
   /* color: #bababa; */
   font-size: 0.8rem;
   line-height: 1.3em;
+}
+
+textarea {
+  width: 100%;
+  height: 80px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  background-color: #23272a;
+  /* font-family: Arial, sans-serif; */
+  font-size: 13px;
+  border-radius: 6px;
+  color: #DEDEDE;
+}
+
+textarea::placeholder {
+  color: #999;
 }
