--- a/views/index.html
+++ b/views/index.html
@@ -5,13 +5,13 @@
 
 <div class="flexcontainer content-area">
     <div id="welcome-text">
-        <h3>🚀&nbsp; Welcome to quickread!</h3>
+        <h3>🚀&nbsp; Welcome to quick<i>read!</i></h3>
         <ul>
             <li>
                 <strong>Summarize </strong>PDFs or pasted text
             </li>
             <li>
-                Listen back with <strong>Text-to-Speech </strong>
+                <strong>Text-to-Speech </strong>playback
             </li>
             <!-- <li>
                 <strong>Speed read </strong>the Pdfs
@@ -53,9 +53,9 @@
 <div class="content-area">
     <hr>
     <div class="content-area">
-        <p><strong>Step 2:</strong> Browse document in <a href="/doc">Documents</a></p>
+        <p><strong>Step 2:</strong> Browse document in <a href="/doc">Documents⤴</a></p>
     </div>
 </div>
 
-
+<script src="/js/index.js" async></script>
 {{template "partials/footer" .}}
