--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -4,7 +4,7 @@
 <head>
     <title>quickread</title>
     <!-- <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="upfast.tf - Community TF2 servers in minutes" />
+    <meta name="description" content="quickread - summarize and listen to pdfs and pasted text" />
     <meta name="author" content="" />
     <meta name="keywords" content="" /> -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -17,7 +17,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
     <!-- <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1352.0.min.js"></script> -->
-    <script src="/js/main.js"></script>
 </head>
 
 <body>
