--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -4,7 +4,7 @@
         <a href="/">Home</a> &nbsp;&nbsp;
         <a href="/doc">Documents</a> &nbsp;&nbsp;
         <a href="/faq">FAQ</a> &nbsp;&nbsp;
-        <a href="/import">Import<span style="border-bottom: none;">⤴</span></a>
+        <!-- <a href="/import">Import<span style="border-bottom: none;">⤴</span></a> -->
         <!-- <a href="https://github.com/sawatkins/quickread" target="_blank" rel="noopener">GitHub</a> &nbsp;&nbsp; -->
     </p>
 </div>
