reconfigure tabs again

--- a/views/index.html
+++ b/views/index.html
@@ -57,5 +57,5 @@
     </div>
 </div>
 
-<script src="/js/index.js" async></script>
+<!-- <script src="/js/index.js" async></script> -->
 {{template "partials/footer" .}}
