summarize button working

--- a/views/summarize.html
+++ b/views/summarize.html
@@ -17,8 +17,9 @@
     <p id="upload-doc-filename" class="small-text"></p>
     <!-- <p id="upload-doc-pages">Pages: </p> -->
 </div>
-<div id="div-summary-response">
-
+<div id="div-summary-response" class="content-area">
+    <button onclick="displayPDFSummaryResponse()">Summarize</button>
+    <p id="p-summary-response"></p>
 </div>
 
 
