--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
         </ul>
     </div>
 </div>
-<div class="content-area">
+<!-- <div class="content-area">
     <hr>
     <div class="content-area">
         <p><strong>Step 1:</strong> Import a PDF document or paste text</p>
@@ -42,7 +42,6 @@
         <div id="div-paste-text" class="content-area">
             <p>Option 2: Paste text</p>
             <form id="form-paste-text" class="content-area" action="/paste" method="post">
-                <!-- <label for="label-paste-text">Text to paste:</label> -->
                 <textarea id="textarea-paste-text" name="textarea-paste-text" placeholder="Paste text here..."></textarea>
                 <p class="small-text"></p>
                 <button id="button-paste-text" type="submit">Import</button>
@@ -55,7 +54,7 @@
     <div class="content-area">
         <p><strong>Step 2:</strong> Browse document in <a href="/doc">Documents⤴</a></p>
     </div>
-</div>
+</div> -->
 
 <!-- <script src="/js/index.js" async></script> -->
 {{template "partials/footer" .}}
