--- a/views/faq.html
+++ b/views/faq.html
@@ -1,8 +1,19 @@
 <!-- {{template "partials/header" .}} -->
 {{template "partials/navbar" .}}
 
-<h1>{{.Title}}</h1>
 
-<p>Check back later to see the FAQ...</p>
 
+
+
+<div id="faq" class="content-area">
+
+    <h2>This is an h2</h2>
+    <p>this is a response</p>
+    
+    <h3>this is an h3</h3>
+    <p>this is an response</p>
+    
+    <strong>this is a strong</strong>
+    <p>this is a respnse</p>
+</div>
 {{template "partials/footer" .}}
