--- a/views/faq.html
+++ b/views/faq.html
@@ -1,19 +1,16 @@
 <!-- {{template "partials/header" .}} -->
 {{template "partials/navbar" .}}
 
-
-
-
+<h2>❓ Frequently Asked Questions</i></h2>
 
 <div id="faq" class="content-area">
+    
+    <h4>What is quickread?</h4>
+    <p>Quickread is a simple web application easily summarize and listen to articles and documents.</p>
 
-    <h2>This is an h2</h2>
-    <p>this is a response</p>
-    
-    <h3>this is an h3</h3>
-    <p>this is an response</p>
-    
-    <strong>this is a strong</strong>
-    <p>this is a respnse</p>
+    <h4>Is quickread free?</h4>
+    <p>Yes, quickread is currenly free while in development.</p>
+
 </div>
+
 {{template "partials/footer" .}}
