recactor, upload doc return presidned url

--- a/views/faq.html
+++ b/views/faq.html
@@ -4,9 +4,8 @@
 <h2>❓ Frequently Asked Questions</i></h2>
 
 <div id="faq" class="content-area">
-    
     <h4>What is quickread?</h4>
-    <p>Quickread is a simple web application easily summarize and listen to articles and documents.</p>
+    <p>Quickread is a simple web application to easily summarize and listen to articles and documents.</p>
 
     <h4>Is quickread free?</h4>
     <p>Yes, quickread is currenly free while in development.</p>
