--- a/views/index.html
+++ b/views/index.html
@@ -5,13 +5,13 @@
 
 <div class="flexcontainer content-area">
     <div id="welcome-text">
-        <h3>🚀&nbsp; Welcome to quick<i>read!</i></h3>
+        <h2>🚀&nbsp; Welcome to quick<i>read!</i></h2>
         <ul>
             <li>
-                <strong>Summarize </strong>PDFs or pasted text
+                <strong>Summarize </strong>PDF documents
             </li>
             <li>
-                <strong>Text-to-Speech </strong>playback
+                <strong>Listen </strong>to articels and documents
             </li>
             <!-- <li>
                 <strong>Speed read </strong>the Pdfs
