upload and summarize e2e almost working

--- a/views/summarize.html
+++ b/views/summarize.html
@@ -26,9 +26,9 @@
 </div>
 
 
-<div id="summary-response" class="content-area" style="display: block;">
-    <p id="back-to-summarize" class="small-text"><-- Back</p>
-    <p id="p-summary-response"></p>
+<div id="summary-response" class="content-area" style="display: none;">
+    <p id="back-to-summarize" class="small-text" onclick="hideSummaryResultPage()"><-- Back</p>
+    <p id="summary-response"></p>
 </div>
 
 
