kagi api wokring

--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -156,3 +156,24 @@ textarea::placeholder {
   padding-left: 15px;
   padding-right: 15px;
 }
+
+
+.spin {
+  border: 3px solid #556177;
+  border-radius: 50%;
+  border-top: 3px solid #DEDEDE;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 0.43s cubic-bezier(.7,.05,.4,.88) infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
