--- a/views/faq.html
+++ b/views/faq.html
@@ -4,12 +4,13 @@
 <h2>❓ Frequently Asked Questions</i></h2>
 
 <div id="faq" class="content-area">
-    <h4>What is quickread?</h4>
+    <h4>Q. What is quickread?</h4>
     <p>Quickread is a simple web application to easily summarize and listen to articles and documents.</p>
 
-    <h4>Is quickread free?</h4>
+    <h4>Q. Is quickread free?</h4>
     <p>Yes, quickread is currenly free while in development.</p>
 
 </div>
+
 
 {{template "partials/footer" .}}
