--- a/views/summarize.html
+++ b/views/summarize.html
@@ -21,9 +21,9 @@
 </div>
 
 
-<div id="article" class="content-area">
+<!-- <div id="article" class="content-area">
     <h3>📕 Article</h3>
-</div>
+</div> -->
 
 
 <div id="summary-response" class="content-area" style="display: none;">
