--- a/views/summarize.html
+++ b/views/summarize.html
@@ -26,8 +26,8 @@
 </div> -->
 
 
-<div id="summary-response" class="content-area" style="display: none;">
-    <p id="back-to-summarize" class="small-text" onclick="hideSummaryResultPage()"><-- Back</p>
+<div id="summary-response" class="content-area" style="display: block;">
+    <p class="small-text" onclick="hideSummaryResultPage()">← <span id="back-to-summarize">Back</span></p>
     <p id="summary-response"></p>
 </div>
 
