--- a/views/index.html
+++ b/views/index.html
@@ -1,18 +1,18 @@
-<!-- {{template "partials/header" .}} -->
 {{template "partials/navbar" .}}
-
-<!-- <h1>{{.Title}}</h1> -->
 
 <div class="flexcontainer content-area">
     <div id="welcome-text">
         <h2>🚀&nbsp; Welcome to quick<i>read!</i></h2>
         <ul>
             <li>
-                <strong>Summarize </strong>PDF documents
+                <strong>Upload & Summarize </strong>PDF documents
             </li>
             <li>
-                <strong>Listen </strong>to articels and documents
+                Visit the <a href="/summarize">Summarize</a> tab to get started
             </li>
+            <!-- <li>
+                <strong>Listen </strong>to articels and documents
+            </li> -->
             <!-- <li>
                 <strong>Speed read </strong>the Pdfs
             </li> -->
@@ -22,39 +22,6 @@
         </ul>
     </div>
 </div>
-<!-- <div class="content-area">
-    <hr>
-    <div class="content-area">
-        <p><strong>Step 1:</strong> Import a PDF document or paste text</p>
-        <div id="div-upload-doc" class="content-area">
-            <p>Option 1: PDF document. <span class="small-text">(Max file size 15MB)</span></p>
-            <form id='form-upload-doc' class="content-area" action="/upload" method="post"
-                enctype="multipart/form-data">
-                <label id="label-upload-doc" for="input-upload-doc">Browse File</label>
-                <input id="input-upload-doc" name="input-upload-doc" type="file"
-                    onchange="displayFileName()">&nbsp;&nbsp;
-                <button id="button-upload-doc" type="submit">Upload</button>&nbsp;&nbsp;
-                <p id="upload-result-status" style="display: inline;"></p>
-                <span id="upload-result-status-error" class="small-text" style="display: inline;"></span>
-            </form>
-            <p id="upload-doc-filename" class="small-text"></p>
-        </div>
-        <div id="div-paste-text" class="content-area">
-            <p>Option 2: Paste text</p>
-            <form id="form-paste-text" class="content-area" action="/paste" method="post">
-                <textarea id="textarea-paste-text" name="textarea-paste-text" placeholder="Paste text here..."></textarea>
-                <p class="small-text"></p>
-                <button id="button-paste-text" type="submit">Import</button>
-            </form>
-        </div>
-    </div>
-</div>
-<div class="content-area">
-    <hr>
-    <div class="content-area">
-        <p><strong>Step 2:</strong> Browse document in <a href="/doc">Documents⤴</a></p>
-    </div>
-</div> -->
 
 <!-- <script src="/js/index.js" async></script> -->
 {{template "partials/footer" .}}
