--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -3,22 +3,17 @@
 
 <head>
     <title>quickread</title>
-    <!-- <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="quickread - summarize and listen to pdfs and pasted text" />
-    <meta name="author" content="" />
-    <meta name="keywords" content="" /> -->
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="upload and summarize pdfs" />
+    <meta name="author" content="sawatkins" />
+    <meta name="keywords" content="summarize pdf quick" />
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>📚</text></svg>">
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest"> -->
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
-    <!-- <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1352.0.min.js"></script> -->
 </head>
 
 <body>
