--- a/views/faq.html
+++ b/views/faq.html
@@ -4,7 +4,7 @@
 
 <div id="faq" class="content-area">
     <h4>Q. What is quickread?</h4>
-    <p>Quickread is a simple web application to easily summarize and listen to articles and documents.</p>
+    <p>Quickread is a simple web application to easily summarize PDF documents.</p>
 
     <h4>Q. Is quickread free?</h4>
     <p>Yes, quickread is currenly free while in development.</p>
