--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -2,6 +2,7 @@
 <div class="footer">
     <p>
         Copyright &copy; 2023 <a href="https://github.com/sawatkins/quickread" target="_blank" rel="noopener">quickread</a>.
-        Contact: <a href="mailto:admin@exmaple.com">admin@example.com</a>. <br>
+        <a href="https://qw31xe91opk.typeform.com/to/CczQfypd" target="_blank">Feedback</a>.
+        <!-- Contact: <a href="mailto:admin@exmaple.com">admin@example.com</a>. <br> -->
     </p>
 </div>
