--- a/views/summarize.html
+++ b/views/summarize.html
@@ -23,14 +23,15 @@
     <h3>📕 Article</h3>
 </div> -->
 
-<div id="summary-loading" class="content-area summary-block" style="display: none;">
+<!-- <div id="summary-loading" class="content-area summary-block" style="display: none;">
     <p><strong>Summarizing file: </strong><span id="file-summary-name-loading"></span></p>
     <div id="summary-spinner" class="spin"></div>
-</div>
+</div> -->
 
 <div id="summary-response" class="content-area summary-block" style="display: none;">
     <p class="small-text" onclick="goToSummaryUploadPage()">← <span id="back-to-summarize">Back</span></p>
     <p style="display: inline;"><strong>Summary for: </strong><span id="file-summary-name-response"></span></p>
+    <div id="summary-spinner" class="spin"></div>
     <p id="summary-response-text"></p>
 </div>
 
