add license & more spacing changes

--- a/views/faq.html
+++ b/views/faq.html
@@ -9,6 +9,11 @@
     <h4>Q. Is quickread free?</h4>
     <p>Yes, quickread is currenly free while in development.</p>
 
+    <hr>
+    <h4>Icon License</h4>
+    <p>Author: <a href="https://www.svgrepo.com/svg/513266/bank" target="_blank" rel="noopener">pixelbazaar</a></p>
+    <p>License: <a href="https://www.svgrepo.com/page/licensing/#CC%20Attribution"> CC Attribution License</a>. No changes were made.</p>
+
 </div>
 
 {{template "partials/footer" .}}
