--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,10 @@
 
 <div class="flexcontainer content-area">
     <div id="welcome-text">
-        <h2>🚀&nbsp; Welcome to quick<i>read!</i></h2>
+        <div style="display: inline-block; vertical-align: middle;">
+            <img src="img/closed-book.svg" alt="closed boook icon" width="27px" height="27px" style="display: inline; vertical-align: middle;">
+            <h2 style="display: inline; vertical-align: middle;">&nbsp;Welcome to quick<i>read!</i></h2>
+        </div>
         <ul>
             <li>
                 <strong>Upload & Summarize </strong>PDF documents
