--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,4 +1,4 @@
-<hr />
+<hr style="margin-top: 1.4rem;">
 <div class="footer">
     <p>
         Copyright &copy; 2023 <a href="https://github.com/sawatkins/quickread" target="_blank" rel="noopener">quickread</a>.
