--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -2,10 +2,9 @@
     <p>
         <span style="font-size: 1.1rem">quick<i><strong>read</strong></i></span> &nbsp;&nbsp;
         <a href="/">Home</a> &nbsp;&nbsp;
-        <!-- <a href="/doc">Documents</a> &nbsp;&nbsp; -->
         <a href="/summarize">Summarize</a> &nbsp;&nbsp;
         <!-- <a href="/listen">Listen</a> &nbsp;&nbsp; -->
         <a href="/faq">FAQ</a> &nbsp;&nbsp;
     </p>
 </div>
-<hr>
+<hr style="margin-bottom: 1.4rem;">
