--- a/views/summarize.html
+++ b/views/summarize.html
@@ -1,9 +1,8 @@
 {{template "partials/navbar" .}}
 
-<!-- <h1>{{.Title}}</h1> -->
-
-<div class="content-area">
-    <h2>📚 Summarize a PDF</h2>
+<div class="content-area" style="display: inline-block; vertical-align: middle;">
+    <img src="img/file.svg" alt="file icon" width="27px" height="27px" style="display: inline; vertical-align: middle;">
+    <h2 style="display: inline; vertical-align: middle;">&nbsp;Summarize a PDF</h2>
 </div>
 
 <div id="document" class="content-area summary-block">
@@ -18,11 +17,6 @@
     </div>
 </div>
 
-
-<!-- <div id="article" class="content-area summary-block">
-    <h3>📕 Article</h3>
-</div> -->
-
 <!-- <div id="summary-loading" class="content-area summary-block" style="display: none;">
     <p><strong>Summarizing file: </strong><span id="file-summary-name-loading"></span></p>
     <div id="summary-spinner" class="spin"></div>
@@ -35,34 +29,7 @@
     <p id="summary-response-text"></p>
 </div>
 
-
 <br>
-
-<!-- <div id="div-upload-doc" class="content-area">
-    <h3>📘 PDF Documents</h3>
-    <p>Step 1: PDF document. <span class="small-text">(Max file size 15MB)</span></p>
-    <form id='form-upload-doc' class="content-area" action="/upload" method="post" enctype="multipart/form-data">
-        <label id="label-upload-doc" for="input-upload-doc">Browse File</label>
-        <input id="input-upload-doc" name="input-upload-doc" type="file" onchange="displayFileName()">&nbsp;&nbsp;
-        <button id="button-upload-doc" class="action-button" type="submit">Upload</button>&nbsp;&nbsp;
-        <p id="upload-result-status" style="display: inline;"></p>
-        <span id="upload-result-status-error" class="small-text" style="display: inline;"></span>
-    </form>
-    <p id="upload-doc-filename" class="small-text"></p>
-</div>
-<div id="div-summary-response" class="content-area">
-    <div class="content-area">
-        <button id="button-summarize" class="action-button" onclick="displayPDFSummaryResponse()">Summarize</button>
-        <p id="p-summary-response"></p>
-    </div>
-</div> -->
-
-
-
-
-
-
-
 
 <!-- <div id="div-paste-text" class="content-area">
     <h4>Summarize pasted text</h4>
