--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,8 @@
 <div class="flexcontainer content-area">
     <div id="welcome-text">
         <div style="display: inline-block; vertical-align: middle;">
-            <img src="img/closed-book.svg" alt="closed boook icon" width="27px" height="27px" style="display: inline; vertical-align: middle;">
+            <img src="img/closed-book.svg" alt="closed boook icon" width="27px" height="27px"
+                style="display: inline; vertical-align: middle;">
             <h2 style="display: inline; vertical-align: middle;">&nbsp;Welcome to quick<i>read!</i></h2>
         </div>
         <ul>
@@ -23,6 +24,13 @@
                 <strong>No signup or payment</strong> required
             </li> -->
         </ul>
+    </div>
+</div>
+<hr>
+<div style="display: flex; justify-content: center; margin-top: 1rem;">
+    <div class="content-area demo-gif-class">
+        <h2>Demo</h2>
+        <img id="demo-gif" src="img/summary-demo.gif" alt="demo showing a pdf being summarized">
     </div>
 </div>
 
