--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -100,11 +100,12 @@ input[type="file"] {
 
 #label-upload-doc:hover {
   background-color: #2d2e33;
+  text-decoration: underline;
 }
 
 .action-button {
-  border: 1px solid #228b22;
-  background-color: #228b22;
+  border: 1px solid #44a9b7;
+  background-color: #44a9b7;
   display: inline-block;
   /* padding: 6px 12px; */
   padding-top: 3px;
@@ -118,7 +119,8 @@ input[type="file"] {
 }
 
 .action-button:hover {
-  background-color: #0ea00e; 
+  background-color: #55b8c5; 
+  text-decoration: underline;
 }
 
 .content-area {
@@ -182,4 +184,40 @@ textarea::placeholder {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+#demo-gif {
+  /* border: 1px solid #ccc;
+  background-color: #23272a;
+  border-radius: 6px;
+  display: block;
+  margin: 0 auto; */
+  display: block;
+  margin: 10px;
+  width: 800px;
+}
+
+.demo-gif-class {
+  position: relative;
+  display: inline-block;
+  background-color: #25262b;
+  padding: 10px;
+  /* margin-left: 40px;
+  margin-right: 40px; */
+  /* line-height: 1rem; */
+  margin: auto;
+}
+.demo-gif-class h2 {
+  margin-top: 0.4rem;
+}
+
+.demo-gif-class::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  bottom: -5px;
+  left: -5px;
+  background-color: #44a9b7;
+  z-index: -1;
 }
