--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,14 @@
             </li> -->
         </ul>
     </div>
+    <!-- <div id="stats" style="display: none;">
+        <h3>Stats</h3>
+        <ul>
+            <li>Pages Summarized:</li>
+            <li>Word Summarized:</li>
+            <li>Estimated time saved: </li>
+        </ul>
+    </div> -->
 </div>
 <hr>
 <div style="display: flex; justify-content: center; margin-top: 1rem;">
