--- a/views/summarize.html
+++ b/views/summarize.html
@@ -14,6 +14,12 @@
             <button id="button-upload-doc" class="action-button" type="submit">Summarize</button>&nbsp;&nbsp;
             <span id="upload-doc-filename" class="small-text" style="display: inline;"></span>
         </form>
+        <div style="background-color: #44a9b74f">
+            <p>Please note: Summarizing is free while in development. Please don't abuse it!</p>
+            <!-- <p>Last summary: <span id="last-summary">{{.NextSummary}}</span></p> -->
+        </div>
+
+        </p>
     </div>
 </div>
 
