--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -7,6 +7,7 @@
     <meta name="description" content="upload and summarize pdfs" />
     <meta name="author" content="sawatkins" />
     <meta name="keywords" content="summarize pdf quick" />
+    <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
@@ -14,6 +15,7 @@
     <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <!-- css  -->
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
