--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -21,7 +21,8 @@ a {
   color: #995bd7;
 } */
 a:hover {
-  background-color: rgba(81, 91, 112, 0.6);
+  background-color: rgba(81, 91, 112, 0.7);
+  /* background-color: rgba(0, 0, 0, 0.18); */
 }
 
 div#heading {
