remove abilty to submit without a file selected

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,7 +1,7 @@
 <hr style="margin-top: 1.4rem;">
 <div class="footer">
     <p>
-        Copyright &copy; 2023 <a href="https://github.com/sawatkins/quickread" target="_blank" rel="noopener">quickread</a>.
+        &copy; 2023 <a href="https://github.com/sawatkins/quickread" target="_blank" rel="noopener">quickread</a>.
         <a href="https://qw31xe91opk.typeform.com/to/CczQfypd" target="_blank">Feedback</a>.
         <!-- Contact: <a href="mailto:admin@exmaple.com">admin@example.com</a>. <br> -->
     </p>
