error checking and alerts for upload pdf

--- a/views/summarize.html
+++ b/views/summarize.html
@@ -10,7 +10,7 @@
     <div id="div-upload-doc">
         <form id='form-upload-doc' class="content-area" method="post" enctype="multipart/form-data">
             <label id="label-upload-doc" for="input-upload-doc">Browse Files</label>
-            <input id="input-upload-doc" name="input-upload-doc" type="file" onchange="displayFileName()">&nbsp;&nbsp;
+            <input id="input-upload-doc" name="input-upload-doc" type="file" accept=".pdf">&nbsp;&nbsp;
             <button id="button-upload-doc" class="action-button" type="submit" disabled="true">Summarize</button>&nbsp;&nbsp;
             <span id="upload-doc-filename" class="small-text" style="display: inline;"></span>
         </form>
